syntax = "proto3";
package blockrock;

message Transaction {
    string id = 1;
    string from = 2;
    string to = 3;
    double amount = 4;
}

message GetTransactionRequest {
    string id = 1;
}

message TransactionResponse {
    Transaction transaction = 1;
}

service TransactionService {
    rpc GetTransaction(GetTransactionRequest) returns (TransactionResponse);
}
